# Titans-NNX

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
configs/: Config.py  mac.yaml  mac_config.py
data_handler/: loader.py
model_blocks/core/: attention.py  embeddings.py  gated_head.py
model_blocks/memory/: long_term_memory.py  persistent.py
training/: __init__.py  _mesh.py  losses.py  train_mac.py  train_mac_in_colab.ipynb
variants/: mac.py
