[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "titans-nnx"
version = "0.0.1"
description = "Titans - (Memory-as-Context) in JAX + Flax NNX"
authors = [
    { name = "Shay Meron", email = "dvshme@gmail.com" }
]
readme = "README.md"
requires-python = ">= 3.9"
license = { file = "LICENSE" }
keywords = [
    'artificial intelligence',
    'deep learning',
    'test time training',
    'linear attention',
    'memory',
    'multi heads attention',
    'llm',
    'context size'
]

classifiers=[
    'Intended Audience :: Developers',
    'Topic :: Scientific/Engineering :: Artificial Intelligence',
    'License :: OSI Approved :: MIT License',
    'Programming Language :: Python :: 3.9',
]

dependencies = [
  "jax>=0.4.30",
  "jaxlib>=0.4.30",
  "flax>=0.8.0",
  "optax>=0.2.2",
  "PyYAML>=6.0.0",
  "numpy>=1.26.0"
]

[project.urls]
Homepage = "https://github.com/shayme92/Titans-NNX"
Issues = "https://github.com/shayme92/Titans-NNX/issues"

[tool.setuptools]
packages = ["titans_nnx"]
package-dir = {"" = "."}

[tool.setuptools.package-data]
titans_nnx = ["**/*.yaml"]
